feat: 新增禁用功能

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@ant-design/icons": "^4.2.1",
     "antd": "^4",
     "brace": "^0.10.0",
+    "deepmerge": "^4.3.0",
     "generate-schema": "^2.6.0",
+    "loadsh": "^0.0.4",
     "moox": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
