--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@huan007/json-schema-editor-new",
-  "version": "1.0.3",
+  "name": "@gss-bi-fe/json-schema-editor-new",
+  "version": "1.0.1",
   "description": "jsonschema editor",
   "main": "package/index.js",
+  "license": "ISC",
   "scripts": {
     "start": "ykit s -p 8082",
     "demo": "NODE_ENV=production ykit pack -m",
@@ -41,5 +42,8 @@
     "webpack": "^4.5.0",
     "webpack-cli": "^4.9.1",
     "ykit-config-antd": "^2"
+  },
+  "publishConfig": {
+    "registry": "https://packages.glodon.com/artifactory/api/npm/npm-gss-bi-releases/"
   }
 }
